Add stop-writes-on-bgsave-error to the reds configuration

--- a/templates/default/redis.conf.erb
+++ b/templates/default/redis.conf.erb
@@ -102,6 +102,9 @@ rdbcompression yes
 
 # The filename where to dump the DB
 dbfilename dump-<%=@port%>.rdb
+
+# Block writes on bgsave error
+stop-writes-on-bgsave-error <%= @stopwritesonbgsaveerror %>
 <%end%>
 
 # The working directory.
