Add stop-writes-on-bgsave-error to the reds configuration

--- a/templates/default/redis.conf.erb
+++ b/templates/default/redis.conf.erb
@@ -103,6 +103,9 @@ rdbcompression yes
 
 # The filename where to dump the DB
 dbfilename <%= @dbfilename %>
+
+# Block writes on bgsave error
+stop-writes-on-bgsave-error <%= @stopwritesonbgsaveerror %>
 <%end%>
 
 # The working directory.
